syntax = "proto3";

// 生產指令：protoc --go_out=. ./proto_data/*.proto
option go_package = "./shared/req";

// 進入群組(可用於進入直播間)
message EnterGroup {
  // group id
  string id_p = 1;

  // 直播主預設的小游戏 id
  repeated int32 miniGameIdsArray = 2;

  // 透传资料（转抛）
  string data_p = 3;
}
